updated lessons, added chancellor's award

--- a/join.html
+++ b/join.html
@@ -134,7 +134,7 @@ description:
       </p>
       <p style="text-align:left;">
         <i>
-          Avani Kelekar, 7 semesters in BEAM
+          Avani Kelekar, 7 wonderful semesters in BEAM
         </i>
       </p>
     </div>
