--- a/lessons.html
+++ b/lessons.html
@@ -24,7 +24,7 @@ description: Each of our lessons is custom-designed by one of our staff members 
           "name": "airplanes",
           "title": "Can We Pretend That Airplanes",
           "description": "Learn what makes airplanes fly!",
-          "category": "current"
+          "category": "physics"
         },
         {
           "name": "BEAM_away_the_shadows",
@@ -42,31 +42,25 @@ description: Each of our lessons is custom-designed by one of our staff members 
           "name": "break_a_leg",
           "title": "Break A Leg!",
           "description": "Learn about the structure and function of bones, how they heal when broken, and how they work to produce movement.",
-          "category": "current"
-        },
-        {
-          "name": "christmas_BEAM",
-          "title": "The Brightest Bulbs on the Christmas BEAM",
-          "description": "Learn about electricity and its many uses.",
-          "category": "physics"
+          "category": "biology"
         },
         {
           "name": "debugging_loop",
           "title": "Stuck in a Debugging Loop",
           "description": "Explore the basics of how we communicate to computers and write programs that are executed by computers.",
-          "category": "current"
+          "category": "misc"
         },
         {
           "name": "defeat_the_lambdanean_hydra",
           "title": "Defeat the Lambdanean Hydra",
           "description": "An introduction to the science behind hydraulic machines and how liquids can be used to generate and transmit power.",
-          "category": "current"
+          "category": "physics"
         },
         {
           "name": "disease",
           "title": "Disease? Let's B. cereus...",
           "description": "Explore the field of epidemiology and apply it to current trends of disease.",
-          "category": "current"
+          "category": "biology"
         },
         {
           "name": "float_like_a_cadillac",
@@ -133,6 +127,42 @@ description: Each of our lessons is custom-designed by one of our staff members 
           "title": "Not Too S-keen!",
           "description": "Explore the field of dermatology and the importance of sunblock for the skin.",
           "category": "misc"
+        },
+        {
+          "name": "glue_and_goblins",
+          "title": "Glue and Goblins",
+          "description": "Learn about the basic principles of game design.",
+          "category": "misc"
+        },
+        {
+          "name": "frogs",
+          "title": "Frogs",
+          "description": "Explore frog anatomy and the various stages of a frog's life.",
+          "category": "biology"
+        },
+        {
+          "name": "bready_or_not",
+          "title": "Bready or Not, Here I Crumb!",
+          "description": "Learn about the biological, chemical, and physical properties of baking bread.",
+          "category": "chemistry"
+        },
+        {
+          "name": "how_to_train_your_dragon",
+          "title": "BEAMworks’ How to Train Your Dragon",
+          "description": "Explore the realm of disability engineering, learning what it means to be accessible/disability friendly, as well as why accessible engineering is necessary.",
+          "category": "current"
+        },
+        {
+          "name": "whatever_floats_your_boat",
+          "title": "Whatever Floats Your Boat",
+          "description": "Learn about density and buoyancy by making boats and lava lamps.",
+          "category": "current"
+        },
+        {
+          "name": "fantastic_fractals",
+          "title": "Fantastic Fractals Fabricated by Frantic Fiddling Fingers",
+          "description": "Learn about what fractals look like and how they may arise in nature.",
+          "category": "current"
         }
       ];
 
