fa25 lessons and recruitment updates

--- a/faq.html
+++ b/faq.html
@@ -15,8 +15,8 @@ description:
                 <i>We want you to write an amazing application, so we've put together a guide 
                 filled with what you should focus on when writing your responses. Remember, 
                 the best opportunity you'll have to learn more about BEAM and our 
-                application will stil be at our infosession, so don't forget to join us at 
-                <strong>Latimer 120 on Thursday, January 29 @ 8:00 PM PST!</strong></i>
+                application will still be at our infosession, so don't forget to join us next fall!
+                 <!-- at <strong>Latimer 120 on Thursday, January 29 @ 8:00 PM PST!</strong></i> -->
             </p>
             
             <p style="text-align: left;"> <b>BEAM's Mission Statement is: To provide 
