--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@ description: Berkeley Engineers and Mentors
 		<div class="container flex">
 			<div class="text editable">
 				<h2 class="header">What We Do </h2>
-				<p class="body">You can find us at 12 elementary and middle schools in the Berkeley and Oakland area,
+				<p class="body">You can find us at 14 elementary and middle schools in the Berkeley and Oakland area,
 					teaching over 500 students a week with our engaging science and engineering lessons including
 					prosthetic limbs, bottle rockets, strawberry DNA extraction, and much more!</p>
 				<button onclick="window.location.href = 'lessons';" style="margin-top: 3%; padding: 2%; width: 35%;"
@@ -74,11 +74,17 @@ description: Berkeley Engineers and Mentors
 			<div class="text editable">
 				<h2 class="header">Join the Family</h2>
 
-				<p class="body">Interested in being part of the BEAM team? Our Spring 2026 Application opens January 20, 
+				<!-- ### DURING application season ### -->
+				<!-- <p class="body">Interested in being part of the BEAM team? Our Spring 2026 Application opens January 20, 
 					<a href="https://forms.gle/V9jK5nkornB7Sm888">apply here</a>. You are also welcomed to our 
 					infosession January 29th in Latimer at 8pm with pizza provided. Stay updated by following us on <a href="https://www.instagram.com/beam_berkeley">Instagram</a>.
-					In the meantime, be sure to check out the <a href="join/#FAQ">FAQ</a> or our <a href="join">join page</a> for more information!</p>
+					In the meantime, be sure to check out the <a href="join/#FAQ">FAQ</a> or our <a href="join">join page</a> for more information!</p> -->
 				
+				<!-- ### NOT DURING application season ### -->
+				<p class="body">Interested in being part of the BEAM team? Our Fall 2026 Application opens in August. 
+					Stay updated by following us on <a href="https://www.instagram.com/beam_berkeley">Instagram</a>.
+					In the meantime, be sure to check out the <a href="join/#FAQ">FAQ</a> or our <a href="join">join page</a> for more information!</p>
+
 				<button onclick="window.location.href = 'join';" style="margin-top: 3%; padding: 2%; width: 35%;"
 						class="custom-button"><span style="font-size: .8em; font-weight: normal;">Read
 							More
