--- a/join.html
+++ b/join.html
@@ -19,15 +19,15 @@ description:
     </p> -->
 
     <!-- ### These three lines are for DURING application season ### -->
-    <h2 style="font-size: 2.0em; text-align: left;">Our Spring 2026 <a target=_blank href="https://forms.gle/V9jK5nkornB7Sm888">Application</a>
+    <!-- <h2 style="font-size: 2.0em; text-align: left;">Our Spring 2026 <a target=_blank href="https://forms.gle/V9jK5nkornB7Sm888">Application</a>
       and <a target=_blank href="https://beam.berkeley.edu/faq">Application Guide</a> are officially released! <br>
             Our application is due on Friday, January 30th - 11:59 PM PST.
-    </h2>
+    </h2> -->
 
     <!-- ### Next 4 lines are for AFTER Application season ### -->
-   <!-- <a href="#app">We accept mentor applications at the beginning of each semester.</a>
-    <p><strong>Fall 2025 applications are now closed</strong> but feel free to follow us on <a target=_blank
-        href="https://www.instagram.com/beam_berkeley">Instagram</a> to receive information about our Spring 2026 infosession/application.</p> -->
+   <a href="#app">We accept mentor applications at the beginning of each semester.</a>
+    <p><strong>Spring 2026 applications are now closed</strong> but feel free to follow us on <a target=_blank
+        href="https://www.instagram.com/beam_berkeley">Instagram</a> to receive information about our Fall 2026 infosession/application in August.</p>
  
 
         <!-- The next 4 paragraphs are for application season, just uncomment and edit links/dates. -->
