--- a/lessons.html
+++ b/lessons.html
@@ -153,15 +153,51 @@ description: Each of our lessons is custom-designed by one of our staff members 
           "category": "current"
         },
         {
+          "name": "fantastic_fractals",
+          "title": "Fantastic Fractals Fabricated by Frantic Fiddling Fingers",
+          "description": "Learn about what fractals look like and how they may arise in nature.",
+          "category": "current"
+        },
+        {
+          "name": "BEAM_olympics",
+          "title": "BEAM Olympics",
+          "description": "Learn about basic physics concepts like energy and motion, drawing examples from sports!",
+          "category": "current"
+        },
+        {
           "name": "whatever_floats_your_boat",
           "title": "Whatever Floats Your Boat",
           "description": "Learn about density and buoyancy by making boats and lava lamps.",
           "category": "current"
         },
         {
-          "name": "fantastic_fractals",
-          "title": "Fantastic Fractals Fabricated by Frantic Fiddling Fingers",
-          "description": "Learn about what fractals look like and how they may arise in nature.",
+          "name": "teeth",
+          "title": "Teeth",
+          "description": "Learn about the structure of teeth and different dental procedures.",
+          "category": "current"
+        },
+        {
+          "name": "beamers_balance_balance",
+          "title": "Beamers Balance Balance",
+          "description": "Explore the physics of balance through various physical and hands-on activities.",
+          "category": "current"
+        },
+        {
+          "name": "thunder_only_happens_when_theres_DNA",
+          "title": "Thunder Only Happens When There's DNA",
+          "description": "Extract your own DNA to learn about the structure and purpose of DNA!",
+          "category": "current"
+        },
+        {
+          "name": "inside_out_inside_you",
+          "title": "Inside Out Inside You",
+          "description": "Learn about how the brain makes and stores memories.",
+          "category": "current"
+        },
+        {
+          "name": "glow_big_or_go_home",
+          "title": "Glow Big or Go Home",
+          "description": "Learn about fluorescence and chemiluminescence.",
           "category": "current"
         }
       ];
