--- a/lessons.html
+++ b/lessons.html
@@ -66,7 +66,7 @@ description: Each of our lessons is custom-designed by one of our staff members 
           "name": "float_like_a_cadillac",
           "title": "Float like a Cadillac, sting like a BEAMer",
           "description": "Explore real-world engineering concepts related to automobiles, including new innovations in the car industry.",
-          "category": "physics"
+          "category": "current"
         },
         {
           "name": "going_with_the_flow",
@@ -150,55 +150,55 @@ description: Each of our lessons is custom-designed by one of our staff members 
           "name": "how_to_train_your_dragon",
           "title": "BEAMworks’ How to Train Your Dragon",
           "description": "Explore the realm of disability engineering, learning what it means to be accessible/disability friendly, as well as why accessible engineering is necessary.",
-          "category": "current"
+          "category": "misc"
         },
         {
           "name": "fantastic_fractals",
           "title": "Fantastic Fractals Fabricated by Frantic Fiddling Fingers",
           "description": "Learn about what fractals look like and how they may arise in nature.",
-          "category": "current"
+          "category": "misc"
         },
         {
           "name": "BEAM_olympics",
           "title": "BEAM Olympics",
           "description": "Learn about basic physics concepts like energy and motion, drawing examples from sports!",
-          "category": "current"
+          "category": "physics"
         },
         {
           "name": "whatever_floats_your_boat",
           "title": "Whatever Floats Your Boat",
           "description": "Learn about density and buoyancy by making boats and lava lamps.",
-          "category": "current"
+          "category": "physics"
         },
         {
           "name": "teeth",
           "title": "Teeth",
           "description": "Learn about the structure of teeth and different dental procedures.",
-          "category": "current"
+          "category": "biology"
         },
         {
           "name": "beamers_balance_balance",
           "title": "Beamers Balance Balance",
           "description": "Explore the physics of balance through various physical and hands-on activities.",
-          "category": "current"
+          "category": "physics"
         },
         {
           "name": "thunder_only_happens_when_theres_DNA",
           "title": "Thunder Only Happens When There's DNA",
           "description": "Extract your own DNA to learn about the structure and purpose of DNA!",
-          "category": "current"
+          "category": "biology"
         },
         {
           "name": "inside_out_inside_you",
           "title": "Inside Out Inside You",
           "description": "Learn about how the brain makes and stores memories.",
-          "category": "current"
+          "category": "biology"
         },
         {
           "name": "glow_big_or_go_home",
           "title": "Glow Big or Go Home",
           "description": "Learn about fluorescence and chemiluminescence.",
-          "category": "current"
+          "category": "chemistry"
         }
       ];
 
